Fix compatibilidad con Java 1.8 - Reemplazado uso de método "String.isEmpty()" para mantener compatibilidad con Java 8. - Agregado a "README.md" instrucción para correr desde batch.